--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
   background-color: white;
 }
 
@@ -389,8 +394,9 @@ display: none;
 }
 
 #main-content {
+  position: absolute;
+  margin-top: 10px;
   margin-left: 200px;
-  padding: 1px 16px;
   height: 1000px;
 }
 
